--- a/README.html
+++ b/README.html
@@ -1,4 +1,12 @@
 <h2>Table of contents</h2>
+<div style="display:flex">
+    <div>
+      <b>C#</b>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+</div>
 - ***C#***
   - [Delegates in LINQ](https://github.com/kolosovpetro/DelegatesInLINQ)
   - [Covariant Factory](https://github.com/kolosovpetro/CovariantFactory)
@@ -23,38 +31,25 @@
   - [Tree Algorithms](https://github.com/kolosovpetro/Tree-Algorithms)
   - [Graph Algorithms](https://github.com/kolosovpetro/Graph-Algorithms)
 
-- ***SQL***
+- **_SQL_**
   - [Queres 1](https://github.com/kolosovpetro/Rental-SQL-Database)
   - [Queres 2](https://github.com/kolosovpetro/SQL_Course)
-  
-- ***Data Structures***
+- **_Data Structures_**
   - [Linear Data Structures](https://github.com/kolosovpetro/Data-Structures)
   - [Tree Algorithms](https://github.com/kolosovpetro/Tree-Algorithms)
   - [Graph Algorithms](https://github.com/kolosovpetro/Graph-Algorithms)
-  
-- ***Algorithms***
+- **_Algorithms_**
   - [Sort Algorithms](https://github.com/kolosovpetro/Sort-Algorithms)
   - [Search Algorithms](https://github.com/kolosovpetro/Search-Algorithms)
   - [Classical Algorithms](https://github.com/kolosovpetro/Classical-Algorithms)
   - [Bit Converter](https://github.com/kolosovpetro/Bit-Converter)
   - [RPN Calculator](https://github.com/kolosovpetro/RpnCalculator)
   - [Html Site Generator](https://github.com/kolosovpetro/Html-Code-Generator)
-  
-- ***Design Patterns***
+- **_Design Patterns_**
   - [Design Patterns](https://github.com/kolosovpetro/Design-Patterns)
-  
-- ***Misc***
+- **_Misc_**
   - [Quizes](https://github.com/kolosovpetro/Computer-Science-Quizlet)
   - [Codewars](https://github.com/kolosovpetro/Code-Wars)
   - [Console Snake](https://github.com/kolosovpetro/ConsoleSnake)
   - [Flash Cards](https://github.com/kolosovpetro/Flash-Cards)
   - [Old Gadget Strore](https://github.com/kolosovpetro/Gadget-Store)
-  
-<center>
-  <table>
-  <tr>
-      <td><img width="550px" align="left" src="https://github-readme-stats.vercel.app/api?username=kolosovpetro&show_icons=true&hide_border=true&count_private=true&layout=compact" /></td>
-      <td><img width="550px" align="left" src="https://github-readme-stats.vercel.app/api/top-langs/?username=kolosovpetro&hide=html&layout=compact" /></td>
-  </tr>   
-</table>
-</center>
